// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > click on middle item 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  padding-right: 0.5rem;
}

.emotion-5 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-5:hover .e1afnb7a2,
.emotion-5:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #3f4250;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  padding-right: 0.5rem;
}

.emotion-5 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-5:hover .e1afnb7a2,
.emotion-5:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #3f4250;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-7 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-7[aria-disabled="true"] {
  pointer-events: none;
}

.emotion-7:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-7:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-7:last-child .emotion-9 {
  pointer-events: none;
  cursor: default;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10:hover,
.emotion-10:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10:hover,
.emotion-10:active {
  background: #e9eaeb;
  color: #222638;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 emotion-6"
            data-variant="standalone"
            href="/step1"
            variant="bodySmallStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-7 emotion-3"
        >
          <button
            class="emotion-9 emotion-10 emotion-11"
            type="button"
          >
            Step 2
          </button>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <button
            class="emotion-9 emotion-10 emotion-11"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > last item should no be clickable 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-14 {
  pointer-events: none;
  cursor: default;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-14 {
  pointer-events: none;
  cursor: default;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  padding-right: 0.5rem;
}

.emotion-5 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-5:hover .e1afnb7a2,
.emotion-5:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #3f4250;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  padding-right: 0.5rem;
}

.emotion-5 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-5:hover .e1afnb7a2,
.emotion-5:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #3f4250;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-12 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-12[aria-disabled="true"] {
  pointer-events: none;
}

.emotion-12:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-12:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-12:last-child .emotion-14 {
  pointer-events: none;
  cursor: default;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
  background: #e9eaeb;
  color: #222638;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 emotion-6"
            data-variant="standalone"
            href="/step1"
            variant="bodySmallStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 emotion-6"
            data-variant="standalone"
            href="/step1/step2"
            variant="bodySmallStrong"
          >
            I'm a very long... long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-12 emotion-3"
        >
          <button
            class="emotion-14 emotion-15 emotion-16"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  display: inline;
  height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:not(:first-child) .emotion-4 {
  padding: 0 0.5rem;
}

.emotion-2:last-child .emotion-4 {
  pointer-events: none;
}

.emotion-2:last-child .emotion-14 {
  pointer-events: none;
  cursor: default;
}

.emotion-5 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  padding-right: 0.5rem;
}

.emotion-5 .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-5>* {
  pointer-events: none;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-5:hover .e1afnb7a2,
.emotion-5:focus .e1afnb7a2 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-5[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-5:hover::after,
.emotion-5:focus::after {
  background-color: #3f4250;
}

.emotion-5:active {
  text-decoration-thickness: 2px;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
  background: #e9eaeb;
  color: #222638;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 emotion-6"
            data-variant="standalone"
            href="/step1"
            variant="bodySmallStrong"
          >
            Step 1
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-4 emotion-5 emotion-6"
            data-variant="standalone"
            href="/step1/step2"
            variant="bodySmallStrong"
          >
            I'm a very long... long long step
          </a>
        </li>
        <li
          aria-disabled="false"
          class="emotion-2 emotion-3"
        >
          <button
            class="emotion-14 emotion-15 emotion-16"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with invalid child 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 38px;
}

.emotion-0>*:not(:last-child) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*:not(:last-child)::after {
  content: '/';
  color: #727683;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
}

<div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="emotion-0 emotion-1"
      >
        Invalid child
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
